--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".show_result"></activity>
-        <activity android:name=".finish_survey" />
-        <activity android:name=".question_twelve" />
-        <activity android:name=".question_eleven" />
-        <activity android:name=".question_ten" />
-        <activity android:name=".question_nine" />
-        <activity android:name=".question_eight" />
-        <activity android:name=".question_seven" />
-        <activity android:name=".question_six" />
-        <activity android:name=".question_five" />
-        <activity android:name=".question_four" />
-        <activity android:name=".question_three" />
-        <activity android:name=".question_two" />
-        <activity android:name=".question_one" />
+        <activity android:name=".Show_ResultActivity"></activity>
+        <activity android:name=".Finish_SurveyActivity" />
+        <activity android:name=".Question_TwelveActivity" />
+        <activity android:name=".Question_ElevenActivity" />
+        <activity android:name=".Question_TenActivity" />
+        <activity android:name=".Question_NineActivity" />
+        <activity android:name=".Question_EightActivity" />
+        <activity android:name=".Question_SevenActivity" />
+        <activity android:name=".Question_SixActivity" />
+        <activity android:name=".Question_FiveActivity" />
+        <activity android:name=".Question_FourActivity" />
+        <activity android:name=".Question_ThreeActivity" />
+        <activity android:name=".Question_TwoActivity" />
+        <activity android:name=".Question_OneActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
